objects/ASI_CRM_PnL_Cost__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>PnL Costs</relationshipLabel>
        <relationshipName>PnL_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_9L_MTD__c</fullName>
        <formula>IF(ASI_CRM_Volume_9L_MTD__c = 0, 0, ASI_CRM_Total_Cost_MTD__c / ASI_CRM_Volume_9L_MTD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per 9L MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_9L_YTD__c</fullName>
        <formula>IF(ASI_CRM_Volume_9L_YTD__c = 0, 0, ASI_CRM_Total_Cost_YTD__c /  ASI_CRM_Volume_9L_YTD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per 9L YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Number_DA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Number DA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PnL Costs</relationshipLabel>
        <relationshipName>PnL_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Number_PA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Number PA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PnL Costs (Customer Number PA)</relationshipLabel>
        <relationshipName>PnL_Costs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Line_Type__c</fullName>
        <label>Line Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Object_Key__c</fullName>
        <label>Object Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Period_Begin_Date__c</fullName>
        <label>Period Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>PnL Costs</relationshipLabel>
        <relationshipName>PnL_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Cost_MTD__c</fullName>
        <label>Total Cost MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Cost_YTD__c</fullName>
        <label>Total Cost YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_9L_MTD__c</fullName>
        <label>Volume 9L MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_9L_YTD__c</fullName>
        <label>Volume 9L YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PnL Cost</label>
    <listViews>
        <fullName>ASI_CRM_HK_Actual_Cost_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Number_DA__c</columns>
        <columns>ASI_CRM_Customer_Number_PA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Total_Cost_MTD__c</columns>
        <columns>ASI_CRM_Total_Cost_YTD__c</columns>
        <columns>ASI_CRM_Volume_9L_MTD__c</columns>
        <columns>ASI_CRM_Volume_9L_YTD__c</columns>
        <columns>ASI_CRM_Object_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PnL_Cost__c.ASI_CRM_HK_Actual_Cost_Brand</value>
        </filters>
        <label>HK Actual Cost Brand</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_HK_Actual_Cost_Sub_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Number_DA__c</columns>
        <columns>ASI_CRM_Customer_Number_PA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Total_Cost_MTD__c</columns>
        <columns>ASI_CRM_Total_Cost_YTD__c</columns>
        <columns>ASI_CRM_Volume_9L_MTD__c</columns>
        <columns>ASI_CRM_Volume_9L_YTD__c</columns>
        <columns>ASI_CRM_Object_Key__c</columns>
        <columns>ASI_CRM_Period_Begin_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PnL_Cost__c.ASI_CRM_HK_Actual_Cost_Sub_Brand</value>
        </filters>
        <label>HK Actual Cost Sub Brand</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_HK_Budget_Cost_Sub_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Number_DA__c</columns>
        <columns>ASI_CRM_Customer_Number_PA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Period_Begin_Date__c</columns>
        <columns>ASI_CRM_Period_End_Date__c</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Total_Cost_YTD__c</columns>
        <columns>ASI_CRM_Volume_9L_YTD__c</columns>
        <columns>ASI_CRM_Object_Key__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PnL_Cost__c.ASI_CRM_HK_Budget_Cost_Sub_Brand</value>
        </filters>
        <label>HK Budget Cost Sub Brand</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_HK_Customer_Actual</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Period_Begin_Date__c</columns>
        <columns>ASI_CRM_Customer_Number_DA__c</columns>
        <columns>ASI_CRM_Customer_Number_PA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Total_Cost_MTD__c</columns>
        <columns>ASI_CRM_Total_Cost_YTD__c</columns>
        <columns>ASI_CRM_Volume_9L_MTD__c</columns>
        <columns>ASI_CRM_Volume_9L_YTD__c</columns>
        <columns>ASI_CRM_Object_Key__c</columns>
        <columns>ASI_CRM_Line_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PnL_Cost__c.ASI_CRM_HK_Customer_Actual</value>
        </filters>
        <label>HK Customer Actual</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>HK_Customer_Actual_AB1_T</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Period_Begin_Date__c</columns>
        <columns>ASI_CRM_Customer_Number_DA__c</columns>
        <columns>ASI_CRM_Customer_Number_PA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Total_Cost_MTD__c</columns>
        <columns>ASI_CRM_Total_Cost_YTD__c</columns>
        <columns>ASI_CRM_Volume_9L_MTD__c</columns>
        <columns>ASI_CRM_Volume_9L_YTD__c</columns>
        <columns>ASI_CRM_Object_Key__c</columns>
        <columns>ASI_CRM_Line_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PnL_Cost__c.ASI_CRM_HK_Customer_Actual</value>
        </filters>
        <filters>
            <field>ASI_CRM_Sub_Brand__c</field>
            <operation>contains</operation>
            <value>AB1</value>
        </filters>
        <filters>
            <field>ASI_CRM_Line_Type__c</field>
            <operation>equals</operation>
            <value>T</value>
        </filters>
        <label>HK Customer Actual - AB1 - T</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>HK_Customer_Actual_AB1_T_3010</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Number_DA__c</columns>
        <columns>ASI_CRM_Customer_Number_PA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Period_Begin_Date__c</columns>
        <columns>ASI_CRM_Object_Key__c</columns>
        <columns>ASI_CRM_Total_Cost_MTD__c</columns>
        <columns>ASI_CRM_Total_Cost_YTD__c</columns>
        <columns>ASI_CRM_Volume_9L_MTD__c</columns>
        <columns>ASI_CRM_Volume_9L_YTD__c</columns>
        <columns>ASI_CRM_Line_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PnL_Cost__c.ASI_CRM_HK_Customer_Actual</value>
        </filters>
        <filters>
            <field>ASI_CRM_Sub_Brand__c</field>
            <operation>contains</operation>
            <value>AB1</value>
        </filters>
        <filters>
            <field>ASI_CRM_Line_Type__c</field>
            <operation>equals</operation>
            <value>T</value>
        </filters>
        <label>HK Customer Actual - AB1 - T - 3010</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>HK_Customer_Actual_AB1_V</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Period_Begin_Date__c</columns>
        <columns>ASI_CRM_Customer_Number_DA__c</columns>
        <columns>ASI_CRM_Customer_Number_PA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Total_Cost_MTD__c</columns>
        <columns>ASI_CRM_Total_Cost_YTD__c</columns>
        <columns>ASI_CRM_Volume_9L_MTD__c</columns>
        <columns>ASI_CRM_Volume_9L_YTD__c</columns>
        <columns>ASI_CRM_Object_Key__c</columns>
        <columns>ASI_CRM_Line_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PnL_Cost__c.ASI_CRM_HK_Customer_Actual</value>
        </filters>
        <filters>
            <field>ASI_CRM_Sub_Brand__c</field>
            <operation>contains</operation>
            <value>AB1</value>
        </filters>
        <filters>
            <field>ASI_CRM_Line_Type__c</field>
            <operation>equals</operation>
            <value>V</value>
        </filters>
        <label>HK Customer Actual - AB1 - V</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>HK_Customer_Actual_SCA_V</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Period_Begin_Date__c</columns>
        <columns>ASI_CRM_Customer_Number_DA__c</columns>
        <columns>ASI_CRM_Customer_Number_PA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Brand__c</columns>
        <columns>ASI_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Total_Cost_MTD__c</columns>
        <columns>ASI_CRM_Total_Cost_YTD__c</columns>
        <columns>ASI_CRM_Volume_9L_MTD__c</columns>
        <columns>ASI_CRM_Volume_9L_YTD__c</columns>
        <columns>ASI_CRM_Object_Key__c</columns>
        <columns>ASI_CRM_Line_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_PnL_Cost__c.ASI_CRM_HK_Customer_Actual</value>
        </filters>
        <filters>
            <field>ASI_CRM_Sub_Brand__c</field>
            <operation>contains</operation>
            <value>SCA</value>
        </filters>
        <filters>
            <field>ASI_CRM_Line_Type__c</field>
            <operation>equals</operation>
            <value>V</value>
        </filters>
        <label>HK Customer Actual - SCA - V</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PnL Costs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_HK_Actual_Cost_Brand</fullName>
        <active>true</active>
        <label>ASI CRM HK Actual Cost Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_HK_Actual_Cost_Sub_Brand</fullName>
        <active>true</active>
        <label>ASI CRM HK Actual Cost Sub Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_HK_Budget_Cost_Brand</fullName>
        <active>true</active>
        <label>ASI CRM HK Budget Cost Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_HK_Budget_Cost_Sub_Brand</fullName>
        <active>true</active>
        <label>ASI CRM HK Budget Cost Sub Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_HK_Customer_Actual</fullName>
        <active>true</active>
        <label>ASI CRM HK Customer Actual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>